# ailiyah-backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: analysis_ci.yaml  ci.yaml  test_ci.yaml  validate_ci.yaml
src/: app.py  helpers.py  main.py
src/model/: __init__.py  base.py  project.py  prompt.py  request.py
src/router/: __init__.py  base.py  image.py  project.py  prompt.py  request.py
src/router/typing/: types.py
src/service/image_generation/: generator.py
src/service/storage/: __init__.py  base.py  local.py
tests/: conftest.py  helpers.py  test_example.py  test_main.py  test_mcve.py
tests/router/: test_image.py  test_project.py  test_prompt.py  test_request.py
