[project]
name = "diffusion-image-gen-platform"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "harryle", email = "lehoangsonsg@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
